# music-rec

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
src/song_recommender/: config.py
src/song_recommender/api/: app.py
src/song_recommender/features/: audio.py  lyrics.py
src/song_recommender/pipeline/: build_index.py
src/song_recommender/scripts/: build_index.py  convert_dataset.py  run_api.py
tests/: test_basic.py
